update configuration of servo camera plugin

--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/component_snippets.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/component_snippets.sdf.jinja
@@ -2659,7 +2659,7 @@ limitations under the License.
 </link>
 
 <plugin name="servo_camera_plugin" filename="libMrsGazeboCommonResources_ServoCameraPlugin.so">
-  <tilt_update_rate>{{ tilt_update_rate }}</tilt_update_rate>
+  <update_rate>{{ tilt_update_rate }}</update_rate>
   <max_pitch_rate>{{ max_pitch_rate }}</max_pitch_rate>
   <max_pitch>{{ max_pitch }}</max_pitch>
   <min_pitch>{{ min_pitch }}</min_pitch>
