--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/generic_components.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/generic_components.sdf.jinja
@@ -137,14 +137,12 @@ limitations under the License.
       </cylinder>
     </geometry>
     <surface>
-      <ode>
-        <kp>1000000.0</kp>
-        <kd>1.0</kd>
-        <mu1>0.8</mu1>
-        <mu2>0.8</mu2>
-        <min_depth>0.001</min_depth>
-        <max_vel>0.0</max_vel>
-      </ode>
+      <contact>
+        <ode>
+          <min_depth>0.01</min_depth>
+          <max_vel>0.0</max_vel>
+        </ode>
+      </contact>
       <friction>
         <ode/>
       </friction>
