prevent None lines for missing component holders

--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/component_snippets.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/component_snippets.sdf.jinja
@@ -236,7 +236,7 @@ limitations under the License.
     <!--}-->
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -310,7 +310,7 @@ limitations under the License.
     <!--}-->
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -384,7 +384,7 @@ limitations under the License.
     <!--}-->
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -440,7 +440,7 @@ limitations under the License.
     <!--}-->
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -614,7 +614,7 @@ limitations under the License.
     </joint>
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -716,7 +716,7 @@ limitations under the License.
     </joint>
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -997,7 +997,7 @@ limitations under the License.
     </joint>
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -1163,7 +1163,7 @@ limitations under the License.
     </joint>
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -1204,7 +1204,7 @@ limitations under the License.
     <!--}-->
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -1244,7 +1244,7 @@ limitations under the License.
     <!--}-->
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -1284,7 +1284,7 @@ limitations under the License.
     <!--}-->
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -1324,7 +1324,7 @@ limitations under the License.
     <!--}-->
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -1364,7 +1364,7 @@ limitations under the License.
     <!--}-->
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -1420,7 +1420,7 @@ limitations under the License.
     <!--}-->
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -1475,7 +1475,7 @@ limitations under the License.
     <!--}-->
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -1530,7 +1530,7 @@ limitations under the License.
     <!--}-->
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -1585,7 +1585,7 @@ limitations under the License.
     <!--}-->
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -1640,7 +1640,7 @@ limitations under the License.
     <!--}-->
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -1695,7 +1695,7 @@ limitations under the License.
     <!--}-->
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -1750,7 +1750,7 @@ limitations under the License.
     <!--}-->
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -1814,7 +1814,7 @@ limitations under the License.
     <!--}-->
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -2034,7 +2034,7 @@ limitations under the License.
       {%- endfor -%}
 
       <!-- mount {-->
-      {{ mount }}
+      {{ mount if mount }}
       <!--}-->
 
       <!--}-->
@@ -2090,7 +2090,7 @@ limitations under the License.
     <!--}-->
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -2144,7 +2144,7 @@ limitations under the License.
       }}
 
       <!-- mount {-->
-      {{ mount }}
+      {{ mount if mount }}
       <!--}-->
 
       <!--}-->
@@ -2181,7 +2181,7 @@ limitations under the License.
     }}
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -2217,7 +2217,7 @@ limitations under the License.
     }}
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -2410,7 +2410,7 @@ limitations under the License.
     <!--}-->
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -2491,7 +2491,7 @@ limitations under the License.
     <!--}-->
 
     <!-- mount {-->
-    {{ mount }}
+    {{ mount if mount }}
     <!--}-->
 
     <!--}-->
@@ -2829,7 +2829,7 @@ limitations under the License.
       </joint>
 
       <!-- mount {-->
-      {{ mount }}
+      {{ mount if mount }}
       <!--}-->
 
       <!--}-->
