autofill model name from spawner

--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/m690.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/m690.sdf.jinja
@@ -82,7 +82,7 @@
   {%- set prop_izz = 0.0001 -%}
   {# <!--}--> #}
 
-  <model name="{{ name }}">
+  <model name="{{ spawner_args['name'] }}">
 
     {# ================================================================== #}
     {# ||                    bare body definitions                     || #}
