--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/x500.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/x500.sdf.jinja
@@ -103,7 +103,7 @@
   {%- set prop_izz = 0.0001 -%}
   {# <!--}--> #}
 
-  <model name="{{ name }}">
+  <model name="{{ spawner_args['name'] }}">
 
     {# ================================================================== #}
     {# ||                    bare body definitions                     || #}
